syntax = "proto3";

package proto;
option go_package = ".;proto";

message RequestPassword {
  string id = 1;
  uint64 user_id = 2;
  bool is_used = 3;
  string expired_at = 4;
}